compiler-core/src/parse/snapshots/rakun_core__parse__tests__html.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1511
expression: "\npub fn main() {\n   let a = \"5454\"\n\n    <>d1123 {a} <>e1123 {a ++ \"t8741\"} </> </> \n   \n}\n"
---
Parsed {
    module: Module {
        name: "",
        documentation: [],
        type_info: (),
        definitions: [
            TargetedDefinition {
                definition: Function(
                    Function {
                        location: SrcSpan {
                            start: 1,
                            end: 14,
                        },
                        end_position: 89,
                        name: Some(
                            (
                                SrcSpan {
                                    start: 8,
                                    end: 12,
                                },
                                "main",
                            ),
                        ),
                        arguments: [],
                        body: [
                            Assignment(
                                Assignment {
                                    location: SrcSpan {
                                        start: 20,
                                        end: 34,
                                    },
                                    value: String {
                                        location: SrcSpan {
                                            start: 28,
                                            end: 34,
                                        },
                                        value: "5454",
                                    },
                                    pattern: Variable {
                                        location: SrcSpan {
                                            start: 24,
                                            end: 25,
                                        },
                                        name: "a",
                                        type_: (),
                                    },
                                    kind: Let,
                                    annotation: None,
                                },
                            ),
                            Expression(
                                Html {
                                    location: SrcSpan {
                                        start: 40,
                                        end: 82,
                                    },
                                    tag: None,
                                    body: [
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 42,
                                                end: 48,
                                            },
                                            value: "dd1123 ",
                                        },
                                        Var {
                                            location: SrcSpan {
                                                start: 49,
                                                end: 50,
                                            },
                                            name: "a",
                                        },
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 51,
                                                end: 52,
                                            },
                                            value: "  ",
                                        },
                                        Html {
                                            location: SrcSpan {
                                                start: 52,
                                                end: 78,
                                            },
                                            tag: None,
                                            body: [
                                                HtmlText {
                                                    location: SrcSpan {
                                                        start: 54,
                                                        end: 60,
                                                    },
                                                    value: "ee1123 ",
                                                },
                                                BinOp {
                                                    location: SrcSpan {
                                                        start: 61,
                                                        end: 73,
                                                    },
                                                    name: Concatenate,
                                                    left: Var {
                                                        location: SrcSpan {
                                                            start: 61,
                                                            end: 62,
                                                        },
                                                        name: "a",
                                                    },
                                                    right: String {
                                                        location: SrcSpan {
                                                            start: 66,
                                                            end: 73,
                                                        },
                                                        value: "t8741",
                                                    },
                                                },
                                                HtmlText {
                                                    location: SrcSpan {
                                                        start: 74,
                                                        end: 75,
                                                    },
                                                    value: "  ",
                                                },
                                            ],
                                            arguments: [],
                                        },
                                    ],
                                    arguments: [],
                                },
                            ),
                        ],
                        publicity: Public,
                        deprecation: NotDeprecated,
                        return_annotation: None,
                        return_type: (),
                        documentation: None,
                        external_erlang: None,
                        external_javascript: None,
                        implementations: Implementations {
                            rakun: true,
                            can_run_on_erlang: true,
                            can_run_on_javascript: true,
                            uses_erlang_externals: false,
                            uses_javascript_externals: false,
                        },
                    },
                ),
                target: None,
            },
        ],
    },
    extra: ModuleExtra {
        module_comments: [],
        doc_comments: [],
        comments: [],
        empty_lines: [
            35,
            84,
        ],
        new_lines: [
            0,
            16,
            34,
            35,
            83,
            87,
            89,
        ],
    },
}
