compiler-core/src/parse/snapshots/rakun_core__parse__tests__html_div.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1525
expression: "\npub fn main() {\n   let a = \"5454\"\n\n   <div>\n      123456789 {a}\n   </div>\n}\n"
---
Parsed {
    module: Module {
        name: "",
        documentation: [],
        type_info: (),
        definitions: [
            TargetedDefinition {
                definition: Function(
                    Function {
                        location: SrcSpan {
                            start: 1,
                            end: 14,
                        },
                        end_position: 76,
                        name: Some(
                            (
                                SrcSpan {
                                    start: 8,
                                    end: 12,
                                },
                                "main",
                            ),
                        ),
                        arguments: [],
                        body: [
                            Assignment(
                                Assignment {
                                    location: SrcSpan {
                                        start: 20,
                                        end: 34,
                                    },
                                    value: String {
                                        location: SrcSpan {
                                            start: 28,
                                            end: 34,
                                        },
                                        value: "5454",
                                    },
                                    pattern: Variable {
                                        location: SrcSpan {
                                            start: 24,
                                            end: 25,
                                        },
                                        name: "a",
                                        type_: (),
                                    },
                                    kind: Let,
                                    annotation: None,
                                },
                            ),
                            Expression(
                                Html {
                                    location: SrcSpan {
                                        start: 39,
                                        end: 74,
                                    },
                                    tag: None,
                                    body: [
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 44,
                                                end: 61,
                                            },
                                            value: "\n\n      123456789 ",
                                        },
                                        Var {
                                            location: SrcSpan {
                                                start: 62,
                                                end: 63,
                                            },
                                            name: "a",
                                        },
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 64,
                                                end: 68,
                                            },
                                            value: "\n\n   ",
                                        },
                                    ],
                                    arguments: [],
                                },
                            ),
                        ],
                        publicity: Public,
                        deprecation: NotDeprecated,
                        return_annotation: None,
                        return_type: (),
                        documentation: None,
                        external_erlang: None,
                        external_javascript: None,
                        implementations: Implementations {
                            rakun: true,
                            can_run_on_erlang: true,
                            can_run_on_javascript: true,
                            uses_erlang_externals: false,
                            uses_javascript_externals: false,
                        },
                    },
                ),
                target: None,
            },
        ],
    },
    extra: ModuleExtra {
        module_comments: [],
        doc_comments: [],
        comments: [],
        empty_lines: [
            35,
        ],
        new_lines: [
            0,
            16,
            34,
            35,
            74,
            76,
        ],
    },
}
