compiler-core/src/parse/snapshots/rakun_core__parse__tests__html_module_div_tag.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n   let a = \"5454\"\n\n   <c.div class=\"5646546\" style={a} data-rule=\"656\" der=12 valid>\n    65656\n    <>\n        123456789 \n    </>\n   </c.div>\n}\n"
---
Parsed {
    module: Module {
        name: "",
        documentation: [],
        type_info: (),
        definitions: [
            TargetedDefinition {
                definition: Function(
                    Function {
                        location: SrcSpan {
                            start: 1,
                            end: 14,
                        },
                        end_position: 159,
                        name: Some(
                            (
                                SrcSpan {
                                    start: 8,
                                    end: 12,
                                },
                                "main",
                            ),
                        ),
                        arguments: [],
                        body: [
                            Assignment(
                                Assignment {
                                    location: SrcSpan {
                                        start: 20,
                                        end: 34,
                                    },
                                    value: String {
                                        location: SrcSpan {
                                            start: 28,
                                            end: 34,
                                        },
                                        value: "5454",
                                    },
                                    pattern: Variable {
                                        location: SrcSpan {
                                            start: 24,
                                            end: 25,
                                        },
                                        name: "a",
                                        type_: (),
                                    },
                                    kind: Let,
                                    annotation: None,
                                },
                            ),
                            Expression(
                                Html {
                                    location: SrcSpan {
                                        start: 39,
                                        end: 157,
                                    },
                                    tag: None,
                                    body: [
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 101,
                                                end: 116,
                                            },
                                            value: "\n\n    65656\n    ",
                                        },
                                        Html {
                                            location: SrcSpan {
                                                start: 116,
                                                end: 145,
                                            },
                                            tag: None,
                                            body: [
                                                HtmlText {
                                                    location: SrcSpan {
                                                        start: 118,
                                                        end: 142,
                                                    },
                                                    value: "\n\n        123456789 \n    ",
                                                },
                                            ],
                                            arguments: [],
                                        },
                                    ],
                                    arguments: [
                                        HtmlTagAttr {
                                            attr: "class",
                                            location: SrcSpan {
                                                start: 46,
                                                end: 61,
                                            },
                                            value: Some(
                                                String {
                                                    location: SrcSpan {
                                                        start: 52,
                                                        end: 61,
                                                    },
                                                    value: "5646546",
                                                },
                                            ),
                                        },
                                        HtmlTagAttr {
                                            attr: "style",
                                            location: SrcSpan {
                                                start: 62,
                                                end: 71,
                                            },
                                            value: Some(
                                                Var {
                                                    location: SrcSpan {
                                                        start: 69,
                                                        end: 70,
                                                    },
                                                    name: "a",
                                                },
                                            ),
                                        },
                                        HtmlTagAttr {
                                            attr: "data-rule",
                                            location: SrcSpan {
                                                start: 72,
                                                end: 87,
                                            },
                                            value: Some(
                                                String {
                                                    location: SrcSpan {
                                                        start: 82,
                                                        end: 87,
                                                    },
                                                    value: "656",
                                                },
                                            ),
                                        },
                                        HtmlTagAttr {
                                            attr: "der",
                                            location: SrcSpan {
                                                start: 88,
                                                end: 94,
                                            },
                                            value: Some(
                                                Int {
                                                    location: SrcSpan {
                                                        start: 92,
                                                        end: 94,
                                                    },
                                                    value: "12",
                                                },
                                            ),
                                        },
                                        HtmlTagAttr {
                                            attr: "valid",
                                            location: SrcSpan {
                                                start: 95,
                                                end: 100,
                                            },
                                            value: None,
                                        },
                                    ],
                                },
                            ),
                        ],
                        publicity: Public,
                        deprecation: NotDeprecated,
                        return_annotation: None,
                        return_type: (),
                        documentation: None,
                        external_erlang: None,
                        external_javascript: None,
                        implementations: Implementations {
                            rakun: true,
                            can_run_on_erlang: true,
                            can_run_on_javascript: true,
                            uses_erlang_externals: false,
                            uses_javascript_externals: false,
                        },
                    },
                ),
                target: None,
            },
        ],
    },
    extra: ModuleExtra {
        module_comments: [],
        doc_comments: [],
        comments: [],
        empty_lines: [
            35,
        ],
        new_lines: [
            0,
            16,
            34,
            35,
            145,
            157,
            159,
        ],
    },
}
